--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-/*This project was created for freeCodeCamp's Responsive Web Design ceritification*/
+<!--This project was created for freeCodeCamp's Responsive Web Design ceritification-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
