--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--This project was created for freeCodeCamp's Responsive Web Design ceritification-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <title>T</title>
+    <title>JS Documentation</title>
   </head>
   <body>
     <main id="main-doc">
